# OTUSPythonBasicHW

./: pyproject.toml  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  main.py  views.py
homework_04/: jsonplaceholder_requests.py  main.py  models.py  pyproject.toml  requirements.txt
testing/test_homework_03/: test_app.py
