[tool.poetry]
name = "otuspythonbasic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.25.2"
requests = "2.28.1"
ruff = "^0.0.289"
flake8 = "^6.1.0"
docker = "6.0.1"
faker = "13.15.0"
pytest = "7.2.1"
pytest-asyncio = "0.20.3"
pydantic = "^2.4.2"
uvicorn = "^0.23.2"
fastapi = {extras = ["all"], version = "^0.103.2"}
sqlalchemy = "^2.0.22"
pg8000 = "^1.30.3"
jupyter = "^1.0.0"
notebook = "^7.0.6"
aiohttp = "^3.9.1"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
